# gk-server

./: Cargo.toml  Containerfile  Dockerfile
.devcontainer/: devcontainer.json
src/: main.rs
www/: 404.html  index.html
