[package]
name = "gk-server"
version = "0.1.0"
edition = "2021"
authors = ["GrauKatze","Mastodon <https://mastodon.ml/@graukatze>"]
description = "Project for my server lib"
repository = "https://notabug.org/GrauKatze/gk-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gk-server-lib = { path = "../gk-server-lib" }
gk-server-lib = { git = "https://notabug.org/GrauKatze/gk-server-lib" }